--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,14 @@
 name = "relics"
+account_id = "b1a7f24ebd961510d1d93a3c1838b782"
+
+main = "./.cloudflare/worker.js"
+site.bucket = "./.cloudflare/public"
+
+build.command = "npm run build"
+compatibility_date = "2024-11-27"
+workers_dev = true
+
+compatibility_flags = [ "nodejs_compat" ]
 
 [[d1_databases]]
 binding = "DATABASE"
