--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"prettier-plugin-svelte": "^3.3.2",
 		"svelte": "^5.2.9",
 		"svelte-check": "^4.1.0",
+		"svelte-copy": "^2.0.0",
 		"tailwindcss": "^3.4.15",
 		"typescript": "^5.7.2",
 		"typescript-eslint": "^8.16.0",
