--- a/package.json
+++ b/package.json
@@ -12,18 +12,22 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
+		"@oslojs/crypto": "^1.0.1",
+		"@oslojs/encoding": "^1.1.0",
 		"@sveltejs/adapter-auto": "^3.3.1",
 		"@sveltejs/adapter-cloudflare": "^4.7.4",
 		"@sveltejs/kit": "^2.8.4",
 		"@sveltejs/vite-plugin-svelte": "^4.0.2",
 		"@tailwindcss/aspect-ratio": "^0.4.2",
 		"@types/eslint": "^9.6.1",
+		"@types/imurmurhash": "^0.1.4",
 		"autoprefixer": "^10.4.20",
 		"daisyui": "^4.12.14",
 		"eslint": "^9.15.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.46.0",
 		"globals": "^15.12.0",
+		"imurmurhash": "^0.1.4",
 		"prettier": "^3.4.1",
 		"prettier-plugin-svelte": "^3.3.2",
 		"svelte": "^5.2.9",
@@ -32,11 +36,9 @@
 		"tailwindcss": "^3.4.15",
 		"typescript": "^5.7.2",
 		"typescript-eslint": "^8.16.0",
-		"vite": "^5.4.11"
+		"vite": "^5.4.11",
+		"uuid": "^11.0.3"
 	},
 	"dependencies": {
-		"@oslojs/crypto": "^1.0.1",
-		"@oslojs/encoding": "^1.1.0",
-		"uuid": "^11.0.3"
 	}
 }
