--- a/package.json
+++ b/package.json
@@ -15,30 +15,30 @@
 		"@oslojs/crypto": "^1.0.1",
 		"@oslojs/encoding": "^1.1.0",
 		"@sveltejs/adapter-auto": "^3.3.1",
-		"@sveltejs/adapter-cloudflare": "^4.7.4",
-		"@sveltejs/kit": "^2.8.4",
+		"@sveltejs/adapter-cloudflare": "^4.8.0",
+		"@sveltejs/kit": "^2.9.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.2",
 		"@tailwindcss/aspect-ratio": "^0.4.2",
 		"@types/eslint": "^9.6.1",
 		"@types/imurmurhash": "^0.1.4",
+		"@types/lzma": "^2.3.0",
 		"autoprefixer": "^10.4.20",
 		"daisyui": "^4.12.14",
-		"eslint": "^9.15.0",
+		"eslint": "^9.16.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.46.0",
-		"globals": "^15.12.0",
+		"eslint-plugin-svelte": "^2.46.1",
+		"globals": "^15.13.0",
 		"imurmurhash": "^0.1.4",
-		"prettier": "^3.4.1",
+		"lzma": "^2.3.2",
+		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.2",
-		"svelte": "^5.2.9",
-		"svelte-check": "^4.1.0",
+		"svelte": "^5.8.1",
+		"svelte-check": "^4.1.1",
 		"svelte-copy": "^2.0.0",
-		"tailwindcss": "^3.4.15",
+		"tailwindcss": "^3.4.16",
 		"typescript": "^5.7.2",
-		"typescript-eslint": "^8.16.0",
-		"vite": "^5.4.11",
-		"uuid": "^11.0.3"
-	},
-	"dependencies": {
+		"typescript-eslint": "^8.17.0",
+		"uuid": "^11.0.3",
+		"vite": "^5.4.11"
 	}
 }
