fix lzma parsing issue

--- a/package.json
+++ b/package.json
@@ -1,44 +1,45 @@
 {
-	"name": "warframe-relics",
-	"version": "0.0.1",
-	"type": "module",
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "eslint . && prettier --check .",
-		"format": "prettier --write ."
-	},
-	"devDependencies": {
-		"@oslojs/crypto": "^1.0.1",
-		"@oslojs/encoding": "^1.1.0",
-		"@sveltejs/adapter-auto": "^3.3.1",
-		"@sveltejs/adapter-cloudflare": "^4.8.0",
-		"@sveltejs/kit": "^2.9.0",
-		"@sveltejs/vite-plugin-svelte": "^4.0.2",
-		"@tailwindcss/aspect-ratio": "^0.4.2",
-		"@types/eslint": "^9.6.1",
-		"@types/imurmurhash": "^0.1.4",
-		"@types/lzma": "^2.3.0",
-		"autoprefixer": "^10.4.20",
-		"daisyui": "^4.12.14",
-		"eslint": "^9.16.0",
-		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.46.1",
-		"globals": "^15.13.0",
-		"imurmurhash": "^0.1.4",
-		"lzma": "^2.3.2",
-		"prettier": "^3.4.2",
-		"prettier-plugin-svelte": "^3.3.2",
-		"svelte": "^5.8.1",
-		"svelte-check": "^4.1.1",
-		"svelte-copy": "^2.0.0",
-		"tailwindcss": "^3.4.16",
-		"typescript": "^5.7.2",
-		"typescript-eslint": "^8.17.0",
-		"uuid": "^11.0.3",
-		"vite": "^5.4.11"
-	}
+  "name": "warframe-relics",
+  "version": "0.0.1",
+  "type": "module",
+  "scripts": {
+    "dev": "vite dev",
+    "build": "vite build",
+    "preview": "vite preview",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "lint": "eslint . && prettier --check .",
+    "format": "prettier --write ."
+  },
+  "devDependencies": {
+  },
+  "dependencies": {
+    "@oslojs/crypto": "^1.0.1",
+    "@oslojs/encoding": "^1.1.0",
+    "@sveltejs/adapter-auto": "^3.3.1",
+    "@sveltejs/adapter-cloudflare": "^4.8.0",
+    "@sveltejs/kit": "^2.9.0",
+    "@sveltejs/vite-plugin-svelte": "^4.0.2",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@types/eslint": "^9.6.1",
+    "@types/imurmurhash": "^0.1.4",
+    "autoprefixer": "^10.4.20",
+    "daisyui": "^4.12.14",
+    "eslint": "^9.16.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-svelte": "^2.46.1",
+    "globals": "^15.13.0",
+    "imurmurhash": "^0.1.4",
+    "lzma-js-simple": "^1.1.0",
+    "prettier": "^3.4.2",
+    "prettier-plugin-svelte": "^3.3.2",
+    "svelte": "^5.8.1",
+    "svelte-check": "^4.1.1",
+    "svelte-copy": "^2.0.0",
+    "tailwindcss": "^3.4.16",
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.17.0",
+    "uuid": "^11.0.3",
+    "vite": "^5.4.11"
+  }
 }
